[package]
name = "factoriomaps-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
ctrlc = { version = "3.2.3", features = [ "termination" ] }
env_logger = "0.9.0"
fast_image_resize = "1.0.0"
fs2 = "0.4.3"
fuser = "0.11.1"
humantime = "2.1.0"
image = { version = "0.24.3", default-features = false, features = ["png"] }
include_dir = "0.7.3"
indicatif = "0.17.1"
libc = "0.2.132"
rayon = "1.5.3"
serde = { version = "1.0.145", features = [ "derive" ] }
serde_json = "1.0.85"
webp = "0.2.2"
