[package]
name = "factoriomaps-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.7"
ctrlc = { version = "3.2.5", features = [ "termination" ] }
fast_image_resize = "2.7.0"
fs2 = "0.4.3"
fuser = "0.12.0"
hooky = "0.2.0"
image = { version = "0.24.6", default-features = false, features = ["png"] }
include_dir = "0.7.3"
indicatif = "0.17.3"
lazy_static = "1.4.0"
libc = "0.2.141"
serde = { version = "1.0.159", features = [ "derive" ] }
serde_json = "1.0.95"
webp = "0.2.2"
