[package]
name = "factoriomaps-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.7"
ctrlc = { version = "3.2.5", features = [ "termination" ] }
factoriomaps_lib = { artifact = "cdylib", version = "0.1.0", path = "factoriomaps_lib", lib = true }
fs2 = "0.4.3"
include_dir = "0.7.3"
indicatif = "0.17.3"
libc = "0.2.141"
serde = { version = "1.0.159", features = [ "derive" ] }
serde_json = "1.0.95"
webp = "0.2.2"
