[package]
name = "factoriomaps_lib"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
crossbeam = "0.8.2"
fast_image_resize = "2.7.0"
hooky = "0.2.0"
image = { version = "0.24.6", default-features = false, features = ["bmp"] }
include_dir = "0.7.3"
indicatif = "0.17.3"
jpeg-encoder = { version = "0.5.1", features = ["simd"] }
lazy_static = "1.4.0"
libc = "0.2.141"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
